[workspace]
members = [
  "data_structure/queue",
  "data_structure/stack",
  "data_structure/doubly_linked_list",
  "data_structure/rooted_tree",
  "data_structure/binry_tree",
  "data_structure/tree_walk",
  "data_structure/binry_search_tree",
  "data_structure/complete_binary_tree_printing",
  "data_structure/complete_binary_tree",
  "data_structure/maximum_heap",
  "data_structure/priority_queue",
  "sorts/bubble_sort",
  "sorts/insertion_sort",
  "sorts/judge_stable",
  "sorts/selection_sort",
  "sorts/merge_sort",
  "sorts/partition",
  "sorts/quick_sort",
  "sorts/counting_sort",
  "search/linear_search",
  "search/binary_search",
  "search/hash",
  "strategy/devide_and_concur_search",
  "strategy/koch_curve",
  "util",
]
exclude = ["data_structure", "sorts", "search", "strategy"]