[workspace]
members = [
  "computational_geometry/parallel_orthogonal",
  "computational_geometry/projection",
  "computational_geometry/reflection",
  "computational_geometry/manhattan_geometry",
  "computational_geometry/geometric_element",
  "data_structure/queue",
  "data_structure/stack",
  "data_structure/doubly_linked_list",
  "data_structure/rooted_tree",
  "data_structure/binry_tree",
  "data_structure/tree_walk",
  "data_structure/binry_search_tree",
  "data_structure/complete_binary_tree_printing",
  "data_structure/complete_binary_tree",
  "data_structure/maximum_heap",
  "data_structure/priority_queue",
  "data_structure/graph",
  "data_structure/graph_dfs",
  "data_structure/graph_bfs",
  "data_structure/graph_connected_components",
  "data_structure/minimum_spanning_tree",
  "data_structure/single_source_shortest_path",
  "data_structure/all_pairs_shortest_path",
  "data_structure/disjoint_set",
  "data_structure/kd_tree",
  "data_structure/diameter_of_a_tree",
  "sorts/bubble_sort",
  "sorts/insertion_sort",
  "sorts/judge_stable",
  "sorts/selection_sort",
  "sorts/merge_sort",
  "sorts/partition",
  "sorts/quick_sort",
  "sorts/counting_sort",
  "sorts/topological_sort",
  "search/linear_search",
  "search/binary_search",
  "search/hash",
  "search/articulation_point",
  "strategy/devide_and_concur_search",
  "strategy/koch_curve",
  "strategy/fibonacci",
  "strategy/lcs",
  "strategy/matrix_chain_multiplication",
  "strategy/coin_changing_problem",
  "strategy/knapsac_problem",
  "strategy/longest_increasing_subsequence",
  "strategy/largest_square",
  "strategy/largest_rectangle",
  "util",
]
exclude = ["computational_geometry", "data_structure", "sorts", "search", "strategy"]