[workspace]
members = [
  "stack",
  "queue",
  "doubly_linked_list",
  "rooted_tree",
  "binary_tree",
  "tree_walk",
  "binary_search_tree",
  "complete_binary_tree",
  "complete_binary_tree_printing",
  "maximum_heap",
  "priority_queue",
  "graph",
  "graph_dfs",
  "graph_bfs",
  "graph_connected_components",
  "minimum_spanning_tree",
  "single_source_shortest_path",
]