[package]
name = "maximum_heap"
version = "0.1.0"
authors = ["lanocci <16540010+lanocci@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../util" }
complete_binary_tree = { path = "../complete_binary_tree" }